46
================

31/08/22 Allow sort to be set for html_X_animals service methods #720
29/08/22 Address lookup from postcode for UK/Ireland/Canada/Holland #306
27/08/22 Make animals and people hyperlinks in looking for report
25/08/22 Allow multiple entry categories to be set for sac metrics #1153
24/08/22 Allow upto 20 custom emblems
23/08/22 Check the home telephone field when finding similar people
22/08/22 Change medical profile column labels to match dialog (Name->Profile)
18/08/22 Add locale for Zimbabwe en_ZW
18/08/22 SAC Metrics publisher now live #1153
16/08/22 User screen shows login/super/2fa enabled in a single column #1055
16/08/22 Support for 2FA via Google Authenticator #1055
16/08/22 Add QRCodeJS lib, backend code for one time passwords #1055
12/08/22 Option to export incoming forms in a CSV file #1164
12/08/22 Suppress system generated form fields in notification emails #1166
12/08/22 Strip style tags when storing forms #1165
11/08/22 Add Indonesia/English locale
09/08/22 Require 3 chars to be entered for vacc/manufacturer autocomplete
09/08/22 maint endpoint for sac metrics, integration tests #1153
09/08/22 First draft of UI/config for SAC Metrics publisher #1153
08/08/22 Restrict simple search to 30 chars (attacks with long queries)
08/08/22 Fix hover style for media icon mode (stops icons moving around)
05/08/22 Code to be able to migrate to another S3 compatible provider
04/08/22 Event module start and wp tags (Roman Safovich) #1161
04/08/22 Add live release rate to stats on home page
04/08/22 Fix bug where adoptable=1 can be set when location does not match
04/08/22 Final refactor/speed improvements to home screen
03/08/22 Visual indicator of cache time used on home screen sections
03/08/22 "Up for adoption" home page links should obey sites/location filters
03/08/22 News checks should be part of the batch with no blocking of home page
03/08/22 Report update checks need only be done as part of cron/daily